# JAMS

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
src/jams/: __init__.py  db_helper.py  dbus_helper.py  jams.py  settings.py
